GM Converter finished.
Old files were moved to sub folder.